# vritual-assistant

./: -w  .env.example  .gitignore  2026-07-19  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE_ENGINE_NICHE_PLATFORM_BLUEPRINT.md  CRATIO_CLOSE_GAP.md  DEEPSEEK_BUILD_PROMPT_SINGLE_TENANT.md  DEEPSEEK_FIX_PROMPT.md  DEMO-SCRIPT.md  DEPLOYMENT_PLAN.md  FULL_AUDIT_REPORT.md  JARVIS_PLAN.md  NICHE_TEMPLATE_SYSTEM_BUILD_GUIDE.md  PEAK_MIKEY_BUILD_PLAN.md  PLAN.md  PLAN_AI_CRM_UPGRADE.md  PLAN_CRM_V2.md  PRODUCTION_BUILD_GUIDE.md  README.md  SECURITY.md  _b64_agent-service_app_prompt.py.txt  _b64_backend_client.txt  _b64_backend_client2.txt  _b64_backend_src_leads_leads.service.ts.txt  _b64_leads2.txt  _cat_env.mjs  _check_config.mjs  _check_dash_label.mjs  _check_git.mjs  _cleanup_stray.mjs  _debug_fails.mjs  _deploy.mjs  _deploy2.mjs  _deploy3.mjs  _deploy_all.mjs  _deploy_dashboards.mjs  _deploy_dashboards2.mjs  (+59 more)
agent-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
agent-service/agent_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent-service/app/: backend_client.py  config.py  config_runtime.py  copilot.py  copilot_tools.py  graph.py  idempotency.py  khoj_client.py  lead_agent.py  logging_config.py  main.py  memory_client.py  niche_config.py  observability.py  operator_agent.py  prompt.py  prompt_copilot.py  prompt_supervisor.py  runner.py  schemas.py  supervisor_graph.py  tools.py
agent-service/tests/: conftest.py  test_backend_client.py  test_copilot_tools.py  test_graph.py  test_niche_config.py  test_observability.py  (+6 more)
(+1277 files in other folders)
