[project]
name = "agent-service"
version = "1.0.0"
description = "AI Lead Conversation Agent — LangGraph + Claude"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "pydantic>=2",
    "pydantic-settings>=2",
    "httpx>=0.27",
    "redis>=5.2",
    "tenacity>=9",
    "structlog>=24",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
